--- a/.env.sample
+++ b/.env.sample
@@ -1,20 +1,32 @@
+# Provider Selection
+TEXT_PROVIDER="google" # "openai" or "google"
+TTS_PROVIDER="google"  # "openai" or "google"
+
+# OpenAI
 # OpenAI API Key
 OPENAI_API_KEY=
+GEMINI_API_KEY=
 
 # Text Generation Model
 # Podcastのコンテンツ生成のためのモデル
-TEXT_MODEL=gpt-4o   
+# TEXT_MODEL=gpt-4o
+TEXT_MODEL=gemini-2.0-flash
 
 # Audio Generation Model(tts-1, tts-1-hd)
 # 音声生成のためのモデル
-AUDIO_MODEL=tts-1       
+AUDIO_MODEL=google-tts-1       
 
 # Speaker 1 Voice(alloy, echo, fable, onyx, nova, shimmer)
 # スピーカー1の声
-SPEAKER_1_VOICE=alloy
-SPEAKER_1_NAME="Naomi"
+SPEAKER_1_VOICE=en-US-Wavenet-D
+SPEAKER_1_NAME="Alex"
 
 # Speaker 2 Voice(alloy, echo, fable, onyx, nova, shimmer)  
 # スピーカー2の声
-SPEAKER_2_VOICE=echo
-SPEAKER_2_NAME="Ken"
+SPEAKER_2_VOICE=en-US-Wavenet-F
+SPEAKER_2_NAME="Sarah"
+
+
+
+# Google Cloud Application Credentials
+GOOGLE_APPLICATION_CREDENTIALS=
