:memo:環境変数ファイルの変更

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,11 @@
-# Provider Selection
-TEXT_PROVIDER="google" # "openai" or "google"
-TTS_PROVIDER="google"  # "openai" or "google"
-OPENAI_API_KEY=
-GEMINI_API_KEY=
+# Google TTS & Gemini
+TEXT_PROVIDER="google"
+TTS_PROVIDER="google"
+
+# Text Generation Model
 TEXT_MODEL=gemini-2.0-flash
+
+# Audio Generation Model
 AUDIO_MODEL=google-tts-chirp3-hd    
 
 # Voice settings
@@ -13,6 +15,27 @@ SPEAKER_1_NAME="Alex"
 SPEAKER_2_VOICE=en-US-Chirp3-HD-Leda
 SPEAKER_2_NAME="Sarah"
 
-
 # Google Cloud Application Credentials
 GOOGLE_APPLICATION_CREDENTIALS=
+GEMINI_API_KEY=
+
+
+
+# # OpenAI
+# TEXT_PROVIDER="openai"
+# TTS_PROVIDER="openai"
+
+# TEXT_MODEL=gpt-4o-mini
+
+# # Audio Generation Model
+# AUDIO_MODEL=tts-1
+
+# # Voice settings
+# SPEAKER_1_VOICE=alloy
+# SPEAKER_1_NAME="Alex"
+
+# SPEAKER_2_VOICE=echo
+# SPEAKER_2_NAME="Sarah"
+
+# # OpenAI API Key
+# OPENAI_API_KEY=
